Added in flag to ensure preview features are compiled in